err/dtests.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dTests'...
Compiling './lib/python3.5/site-packages/dTests/dtests_job.py'...
***   File "./lib/python3.5/site-packages/dTests/dtests_job.py", line 33
    print "Error : Missing configuration file"
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dTests/dtests_node.py'...
***   File "./lib/python3.5/site-packages/dTests/dtests_node.py", line 15
    print "Starting Node ..."
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dTests/dtests_server.py'...
***   File "./lib/python3.5/site-packages/dTests/dtests_server.py", line 5
    print "Starting Server ..."
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dTests/node'...
Compiling './lib/python3.5/site-packages/dTests/node/node.py'...
***   File "./lib/python3.5/site-packages/dTests/node/node.py", line 18
    print "Connected to server %s:%s" % (self.host,self.port)
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dTests/server'...
Compiling './lib/python3.5/site-packages/dTests/server/server.py'...
***   File "./lib/python3.5/site-packages/dTests/server/server.py", line 26
    print "Node listener started and listening on  %s:%s" % (host,port)
                                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dTests/utils'...
Listing './lib/python3.5/site-packages/dTests-0.1.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
